[workspace]
resolver = "2"  # https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members = [
    # functions
    "app/functions/function_one",
    "app/functions/function_two",
    "app/functions/function_three",
    # libraries
    "app/libraries/lambda_http_wrapper",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.13.0"
aws_lambda_events = "0.16.0"
lambda_http = "0.14.0"
tokio = { version = "1.0", features = ["macros"] }
