[package]
name = "function_three"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "function_three"
path = "src/function_three.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }

# internal dependencies
lambda_http_wrapper = { path = "../../libraries/lambda_http_wrapper"}
